--- a/src/style.css
+++ b/src/style.css
@@ -5,7 +5,7 @@ body {
     overflow: hidden;
 }
 
-div #bookmarklist {
+#bookmarklist {
     background-image:repeating-linear-gradient(
             45deg,
             #606dbc,
