--- a/src/style.css
+++ b/src/style.css
@@ -2,6 +2,9 @@
 body {
   background-color: #505050;
   overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
 }
 
 #list {
@@ -18,7 +21,7 @@ body {
   align-self: center;
 }
 
-#icons {
+.icons {
   width: 100px;
   height: 100%;
 }
