--- a/src/bookmarklet-manager/assets/style.scss
+++ b/src/bookmarklet-manager/assets/style.scss
@@ -1,6 +1,6 @@
-/* this file is embeded using webpack*/
+/* this file is embeded using esbuild*/
 body {
-  background-color: #505050;
+  background-color: #484848;
   overflow: hidden;
   display: flex;
   justify-content: center;
@@ -8,13 +8,7 @@ body {
 }
 
 #list {
-  background-image: repeating-linear-gradient(
-    0deg,
-    #505050 0px,
-    #606dbc 10px,
-    #465298 10px,
-    #465298 20px
-  );
+  background-image: repeating-linear-gradient(0deg, #8f8f8f 0px, #808080 10px);
   overflow-y: scroll;
   width: calc(100% - 50px);
   height: calc(100% - 25px);
